--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.google.code.gson:gson-parent:2.6.2'
     compile 'com.android.support:design:23.3.0'
     compile files('libs/mpandroidchartlibrary-2-2-4.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
